--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.29.4",
     "@reduxjs/toolkit": "^1.8.5",
     "next": "12.3.0",
     "react": "18.2.0",
